Add Google Analytics tracking with actual tracking ID

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Sunshine State Fences - Professional Fence Installation in Tampa Bay" />
     <title>Sunshine State Fences - Free Quote</title>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L0HWQQ5GKC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-L0HWQQ5GKC');
+    </script>
   </head>
   <body>
     <div id="root"></div>
